# rust-ragllm-qdrant-chat

./: .gitignore  Cargo.toml  Makefile  README.md  config.json
kb-docs/oc-mirror/: test.md
kb-docs/quantum-computing/: qubit.md
qdrant-data/: raft_state.json
src/: main.rs
src/api/: schema.rs
src/chat/: client.rs  mod.rs  model.rs  process.rs
src/error/: handler.rs
src/handler/: payload.rs
src/llama/: generate.rs
src/llamacpp/: generate.rs
src/markdown/: process.rs
src/qdrant/: client.rs
