[package]
name = "rust-ragllm-qdrant-chat"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
qdrant-client = "1.10.1"
shuttle-qdrant = "0.46.0"
tokio = { version = "1.38.0", features = ["full"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
reqwest = { version = "0.12.20", features = ["json"] }
async-trait = "0.1.88"
futures-util = "0.3.31"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
